<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screenContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.detail.HeroActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <include
                android:id="@+id/offlineState"
                layout="@layout/offline_state"
                android:visibility="gone"
                tools:visibility="visible" />

            <include
                android:id="@+id/searchNotFound"
                layout="@layout/search_not_found_state"
                android:visibility="gone"
                tools:visibility="visible" />

            <include
                android:id="@+id/defaultError"
                layout="@layout/default_error_state"
                android:visibility="gone"
                tools:visibility="visible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/heroCover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:scaleType="center" />

                <TextView
                    android:id="@+id/photosSize"
                    style="@style/Text.Body.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/gray_opacity_90"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:textColor="@android:color/white"
                    android:visibility="gone"
                    tools:text="10 fotos" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/appToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                android:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sectionDescription"
                style="@style/Text.Body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/section_description"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/heroDescription"
                style="@style/Text.Title.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/brown"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/sectionDescription"
                app:layout_constraintStart_toStartOf="@id/sectionDescription"
                app:layout_constraintTop_toBottomOf="@id/sectionDescription"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/sectionComics"
                style="@style/Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/section_comics"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heroDescription"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/progressComics"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/sectionComics"
                app:layout_constraintTop_toTopOf="@id/sectionComics"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comicsRecycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sectionComics"
                tools:itemCount="10"
                tools:listitem="@layout/hero_related_item"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/sectionSeries"
                style="@style/Text.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/section_series"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comicsRecycler"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/progressSeries"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/sectionSeries"
                app:layout_constraintTop_toTopOf="@id/sectionSeries"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/seriesRecycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sectionSeries"
                tools:itemCount="10"
                tools:listitem="@layout/hero_related_item"
                tools:visibility="visible" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>